# lrcalc

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  lrcalc.c  schubmult.c
include/lrcalc/: hashtab.h  lincomb.h  schublib.h  symfcn.h
src/: CMakeLists.txt  alloc.c  hashtab.c  lincomb.c  list.c  maple.c  salloc.c  schublib.c  set.c  symfcn.c  vectarg.c  vector.c
tests/: CMakeLists.txt  test_lrcalc.c  test_lrcalc.cc
